feat: Implement TriviaManager and QuizQuestion for Java trivia functionality. Created a new folder for the package let me know if this works.